--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
     
     <body>
         <div class = "header-container">
-            <div class = "header-logo">Header Logo</div>
-            <div class = "header-links-container">
-                <div class = "header-link">header link one</div>
-                <div class = "header-link">header link two</div>
-                <div class = "header-link">header link three</div>
-            </div>
-            <div class = "header-text-container">
-                <div class = "header-title">This website is awesome</div>
-                <div class = "header-text-content">
-                    This website has some subtext that goes under the main title. 
-                    It's a smaller font and the color is lower contrast.
+            <div class = "header-logo-links-container">
+                <div class = "header-logo">Header Logo</div>
+                <div class = "header-links-container">
+                    <div class = "header-link">header link one</div>
+                    <div class = "header-link">header link two</div>
+                    <div class = "header-link">header link three</div>
                 </div>
-                <button class = "sign-up-button">Sign Up</button>
             </div>
-            <div class = "header-image-container">this is a placeholder for an image</div>
+            <div class = "header-text-img-container">
+                <div class = "header-text-container">
+                    <div class = "header-title">This website is awesome</div>
+                    <div class = "header-text-content">
+                        This website has some subtext that goes under the main title. 
+                        It's a smaller font and the color is lower contrast.
+                    </div>
+                    <button class = "sign-up-button">Sign Up</button>
+                </div>
+                <div class = "header-image-container">this is a placeholder for an image</div>
+            </div>
         </div>    
     </body>
 </html>
