--- a/index.html
+++ b/index.html
@@ -35,6 +35,42 @@
                 </div>
                 <div class = "header-image-container">this is a placeholder for an image</div>
             </div>
-        </div>    
+        </div>
+
+        
+        <div class = "info-container">
+            <div class = "info-header">Some Random Information.</div>
+
+            <div class = "info-box-container">
+                <div class = "info-box">
+                    <div class = "info-img"></div>
+                    <div class = "info-caption">
+                        this is some subtext under an
+                        illustration or image
+                    </div>
+                </div>
+                <div class = "info-box">
+                    <div class = "info-img"></div>
+                    <div class = "info-caption">
+                        this is some subtext under an
+                        illustration or image
+                    </div>
+                </div>
+                <div class = "info-box">
+                    <div class = "info-img"></div>
+                    <div class = "info-caption">
+                        this is some subtext under an
+                        illustration or image
+                    </div>
+                </div>
+                <div class = "info-box">
+                    <div class = "info-img"></div>
+                    <div class = "info-caption">
+                        this is some subtext under an
+                        illustration or image
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
